# openmm_agbnp_plugin

./: CMakeLists.txt  LICENSE  README.md
example/: 1dwc_2.dms  1dwc_agbnp1.dms  1dwc_benchmark.py  1li2_2.dms  1li2_agbnp1.dms  2clr_2.dms  2clr_agbnp1.dms  2clr_benchmark.py  desmonddmsfile.py  hivrt_benchmark.py  rnaseh_2.dms  rnaseh_agbnp1.dms  rnaseh_benchmark.py  t4lysozyme_benchmark.py  test_agbnp.py  test_gaussvol.py  trpcage_2.dms  trpcage_agbnp1.dms  trpcage_benchmark.py
gaussvol/: gaussvol.cpp  gaussvol.h
openmmapi/include/: AGBNPForce.h  AGBNPKernels.h  AGBNPUtils.h  GVolForce.h  GVolKernels.h
openmmapi/include/internal/: AGBNPForceImpl.h  GVolForceImpl.h  windowsExportAGBNP.h  windowsExportGVol.h
openmmapi/src/: AGBNPForce.cpp  AGBNPForceImpl.cpp  AGBNPUtils.cpp  GVolForce.cpp  GVolForceImpl.cpp
python/: AGBNPPlugin.i  AGBNPUtils.py  CMakeLists.txt  GVolPlugin.i  setup.py
